--- a/index.html
+++ b/index.html
@@ -2,137 +2,147 @@
 <html>
 
 <head>
-   <figure>
-      <img src="" alt="">
-   </figure>
-   <title>Tiffany Patton: My life and Places I've lived</title>
+   <link rel="stylesheet" type="text/css"
+      href="C:\Users\Avali\Documents\Launchcode\graded_4\js-assignment-4-html-me-something-PattZhou\style.css" />
+</head>
+<title>Tiffany Patton: My life and Places I've lived</title>
 </head>
 
 <body>
-   <header>
-      <h1>Places I've lived</h1>
-      <select name="places" id="places">
-         <option value="anchorage">Anchorage, Alaska</option>
-         <option value="indiana">French Lick, Indiana</option>
-         <option value="texas">Fort Hood, Texas</option>
-         <option value="alaska">Fort Wainwright, Alaska</option>
-         <option value="louisiana">Fort Polk, Louisiana</option>
-         <option value="missouri">Fort Leonardwood, Missouri</option>
-         <option value="seattle">Fort Lewis and Seattle, Washington</option>
-         <option value="jersey">Voorhees, New Jersey</option>
-      </select>
-   </header>
-   <main>
-      <article>
-         <section>
-            <h2>Anchorage, Alaska</h2>
-            <p> I was born at the AFB Elmendorf in Anchorage.
-               Dad was in the Army, I have an older brother who was also born in Alaska.</p>
-         </section>
-         <section>
-            <h2>French Lick, Indiana</h2>
-            <p> Not too many memories here. We lived here when I was very little
-               and before my dad returned to the Army. He was medically discharged for a couple years.</p>
-         </section>
-         <section>
-            <h2>Fort Hood, Texas</h2>
-            <p> Lived here from around the ages of 4 to 7. I went to two different
-               elementary schools and this is where I adopted my first two dogs. We had to rehome Pongo because he was
-               too much for our family to handle
-               and we kept Copper since he was small and could easily make the constant road trips involved
-               with moving in the military. Copper was a basset hound mix and was named after the hound in 'Fox and the
-               Hound'.</p>
-         </section>
-         <section>
-            <h2>Fort Wainwright, Alaska</h2>
-            <p> Ended up driving all the way back up to Alaska. I think it took like two weeks.
-               It was pretty scary back then, the Alaskan Highway and going through Canada. There was maybe one
-               emergency landline and the rest just wilderness. Recess at school was often cancelled because of the
-               plenty bears
-               and moose. Don't fuck with either.
-               DO NOT go near a moose. They are bigger than you think and will curb stomp you, your ancestors and
-               your car.
-            </p>
-         </section>
-         <section>
-            <h2>Fort Polk, Louisiana</h2>
-            <p> Moved here after Alaska. On our way to Louisiana we stopped to visit Indiana and there we adopted
-               another dog off a farm. Her name was Bear, we later learned she was a Belgian Groenendael. Super athletic
-               and smart.
-               It was okay, Louisiana history class was literally just nothin but Mardi
-               Gras history and Gumbo day. Also they still hit kids with wooden paddles and still have drive-thru liquor
-               stores. Our mascot was The Red Devils, which was weird considering how religious everyone was and the
-               locals protesting the mascot name all the time. And you can buy gator heads and voodoo dolls at gas
-               stations. Dad refused to let us go to New Orleans with friends, believed everyday there was Mardi Gras.
-               Shortly affter we PCS'ed
-               Katrina happened and wiped the city out. Still a little mad about that. Schools including my old one were
-               over populated from the families that had to leave the city.
+   <div>
+      <figure>
+         <img src="images\skyline.jpeg" alt="skyline of Seattle" width="">
+      </figure>
+      <header>
+         <h1 id="mainHeading">Places I've lived</h1>
+         <select name="places" id="places">
+            <option value="anchorage">Anchorage, Alaska</option>
+            <option value="indiana">French Lick, Indiana</option>
+            <option value="texas">Fort Hood, Texas</option>
+            <option value="alaska">Fort Wainwright, Alaska</option>
+            <option value="louisiana">Fort Polk, Louisiana</option>
+            <option value="missouri">Fort Leonardwood, Missouri</option>
+            <option value="seattle">Fort Lewis and Seattle, Washington</option>
+            <option value="jersey">Voorhees, New Jersey</option>
+         </select>
+      </header>
+      <main>
+         <article>
+            <section>
+               <h2 class="headings">Anchorage, Alaska</h2>
+               <p id="testP" class="funParagraph"> I was born at the AFB Elmendorf in Anchorage.
+                  Dad was in the Army, I have an older brother who was also born in Alaska.</p>
+            </section>
+            <section>
+               <h2 class="headings">French Lick, Indiana</h2>
+               <p> Not too many memories here. We lived here when I was very little
+                  and before my dad returned to the Army. He was medically discharged for a couple years.</p>
+            </section>
+            <section>
+               <h2 class="headings">Fort Hood, Texas</h2>
+               <p> Lived here from around the ages of 4 to 7. I went to two different
+                  elementary schools and this is where I adopted my first two dogs. We had to rehome Pongo because he
+                  was
+                  too much for our family to handle and we kept Copper since he was small and could easily make the
+                  constant road trips involved
+                  with moving in the military. Copper was a basset hound mix and was named after the hound in 'Fox and
+                  the
+                  Hound'.</p>
+            </section>
+            <section>
+               <h2 class="headings">Fort Wainwright, Alaska</h2>
+               <p> Ended up driving all the way back up to Alaska. I think it took like two weeks.
+                  It was pretty scary back then, the Alaskan Highway and going through Canada. There was maybe one
+                  emergency landline and the rest just wilderness. Recess at school was often cancelled because of the
+                  plenty bears and moose. Don't fuck with either.
+                  DO NOT go near a moose. They are bigger than you think and will curb stomp you, your ancestors and
+                  your car.
+               </p>
+            </section>
+            <section>
+               <h2 class="headings">Fort Polk, Louisiana</h2>
+               <p> Moved here after Alaska. On our way to Louisiana we stopped to visit Indiana and there we adopted
+                  another dog off a farm. Her name was Bear, we later learned she was a Belgian Groenendael. Super
+                  athletic
+                  and smart.
+                  It was okay, Louisiana history class was literally just nothin but Mardi
+                  Gras history and Gumbo day. Also they still hit kids with wooden paddles and still have drive-thru
+                  liquor
+                  stores. Our mascot was The Red Devils, which was weird considering how religious everyone was and the
+                  locals protesting the mascot name all the time. And you can buy gator heads and voodoo dolls at gas
+                  stations. Dad refused to let us go to New Orleans with friends, believed everyday there was Mardi
+                  Gras.
+                  Shortly affter we PCS'ed Katrina happened and wiped the city out. Still a little mad about that.
+               </p>
+            </section>
+            <section>
+               <h2 class="headings">Fort Leonardwood, Missouri</h2>
+               <p>Weirdly ended up going to three different schools while here. Didn't enjoy Missouri. They did have
+                  very
+                  awesome museums in St. Louis,
+                  and we got to go up the St. Louis Arch for a field trip. If you are severely claustrophobic I do not
+                  recommend. Scrawny teenagers could barely
+                  cram into the small pods and you could hear people screaming in the others. Overall a mild to
+                  moderately
+                  terrifying ride depending on individual fear intensity.</p>
+            </section>
+            <section>
+               <h2 class="headings">Fort Lewis and Seattle, Washington</h2>
+               <p>Longest I ever lived in one spot. Dad retired here. Fort Lewis was the last base I ever lived on.
+                  Ended up living in 3 different housing assignments, our first home was destroyed by a felled tree
+                  during
+                  a windstorm. Then we had temporary housing before we moved again into the permanent housing.
+                  After retirement, family got a house and I spent my late teens and adulthood in Washington. My dog
+                  Copper
+                  lived to be 19 years old and my girl Bear made it to 15. <br>
+                  Eventually landed a job in Seattle as a licensed veterinary technician at a cancer research facility.
+                  I
+                  really enjoyed my job, it was niche,
+                  but I didnt have to deal with customers, only the occasional crazy Primary Investigator or Research
+                  Technician. Met my husband in Seattle, he was transferred by his company
+                  from New Jersey to manage a lab in Seattle. We worked a block from each other. Eventually we adopted a
+                  dog from our colony.
+                  6 years later we were able to get his sister and bring her to New Jersey.
+               </p>
 
-            </p>
-         </section>
-         <section>
-            <h2>Fort Leonardwood, Missouri</h2>
-            <p>Weirdly ended up going to three different schools while here. Didn't enjoy Missouri. They did have very
-               awesome museums in St. Louis,
-               and we got to go up the St. Louis Arch for a field trip. If you are severely claustrophobic I do not
-               recommend. Scrawny teenagers could barely
-               cram into the small pods and you could hear people screaming in the others. Overall a mild to moderately
-               terrifying ride depending on individual fear intensity.</p>
-         </section>
-         <section>
-            <h2>Fort Lewis and Seattle, Washington</h2>
-            <p>Longest I ever lived in one spot. Dad retired here. Fort Lewis was the last base I ever lived on.
-               Ended up living in 3 different housing assignments, our first home was destroyed by a felled tree during
-               a windstorm. Then we had temporary housing before we moved again into the permanent housing.
-               After retirement, family got a house and I spent my late teens and adulthood in Washington. My dog Copper
-               lived to be 19 years old and my girl Bear made it to 15. <br>
-               Eventually landed a job in Seattle as a licensed veterinary technician at a cancer research facility. I
-               really enjoyed my job, it was niche,
-               but I didnt have to deal with customers only the occasional crazy Primary Investigator or Research
-               Technician. Met my husband in Seattle, he was transferred by his company
-               from New Jersey to manage a lab in Seattle. We worked a block from each other. Eventually we adopted a
-               dog from our colony.
-               6 years later we were able to get his sister and bring her to New Jersey.
-               I </p>
-         </section>
-         <section>
-            <h2>Voorhees, New Jersey</h2>
-            <p> Moved to New Jersey because my husband wanted to be near his family and ailing grandma. I had plans to
-               work at a lab, my old
-               Comparative Medicine Director was from New Jersey and was willing to help me find a place when we
-               settled. Except the moment we moved in, I got sick.
-               And I got worse. And I had no health care, losing my insane 0 deductible, 0 out of pocket, pay for
-               nothing but $25 co-pay health insurance because I had quit my job to move.
-               My job supplied us with full coverage healthcare, fmla, and dental and vision and so many things. Then I
-               got sick, and didnt have any of those things. Turns out the east coast doctors
-               like treating everyone like a drug addict and they like to gaslight patients. Lucky me I knew medical
-               stuff, except it still took 2.5 years, dozens of doctors, multiple hospitals and a few hospitilizations
-               to finaly get diagnosed. <br>
-               Also learned New Jersey has no labor laws, only the federal level which is
-               literally nothing. Ya'll dont get mandated breaks or sick time or PTO? Wtf. I tried to work at a simple
-               ass job because of my
-               health and learned
-               that; employers don't help with healthcare coverage, dental offices don't actually understand how to
-               sterilize instruments correctly, breaks arent legally mandated, and the kids under 18 weren't getting the
-               federally protected lunch breaks.
-               Ya'll are treated like absolute garbage here and you guys are okay with that? And when my car broke down
-               and needed a jump not a single person would help amongst other more confrontational problems I've had
-               here. Seattle gets a
-               weird reputation , the "Seattle freeze" , but they are helpful and nice motherfuckers compared to here.
-               You get a naked guy
-               in a tree once in a while and weed is legal. If I was a religious person I'd say Jersey needs Jesus. <br>
-               Anyway, still sick, unemployed, in medical debt and trying to restart my entire life
-               from scratch because no one actually gives a fuck about sick people, which was sadly reinforced during
-               the pandemic. The irony lies in the fact my job was doing medical studies which
-               required massive amounts of different immunosuppressants and the occasional radioactive isotope. And
-               literally raising "Bubble Boy" dogs, so I know the side effects and consequences of what happens when
-               your immune system isn't working.
-               Guess who's going through the immunosuppressant gambit now? This girl&reg;.
+            </section>
+            <section>
+               <h2 class="headings">Voorhees, New Jersey</h2>
+               <p> Moved to New Jersey because my husband wanted to be near his family and ailing grandma. I had plans
+                  to
+                  work at a lab, my old
+                  Comparative Medicine Director was from New Jersey and was willing to help me find a place when we
+                  settled. Except the moment we moved in, I got sick.
+                  And I got worse. And we had no health care, because I had quit my job to move.
+                  My job supplied us with full coverage healthcare, fmla, and dental and vision and so many things. Then
+                  I
+                  got sick, and didnt have any of those things. Turns out the New Jersey doctors
+                  like treating everyone like a drug addict and they like to gaslight patients. Lucky me I knew medical
+                  stuff, except it still took 2.5 years, dozens of doctors, multiple hospitals and a few
+                  hospitilizations
+                  to finaly get diagnosed. <br>
+                  Also learned New Jersey has no labor laws, only the federal level which is
+                  literally nothing. Ya'll dont get mandated breaks or sick time or PTO? Wtf.
+                  Ya'll are treated like absolute garbage here and you guys are okay with that? And when my car broke
+                  down
+                  and needed a jump not a single person would help amongst other more confrontational problems I've had
+                  here. Sure in Seattle you get a naked guy in a tree once in a while, but weed is legal, people are
+                  nice,
+                  and employees have rights. <br>
+                  Anyway, still sick, unemployed, in medical debt and trying to restart my entire life
+                  from scratch because no one actually cares about sick people, which was sadly reinforced during
+                  the pandemic. The irony lies in the fact my job was doing medical studies which
+                  required massive amounts of different immunosuppressants and the occasional radioactive isotope. I
+                  literally raised animals with no immune system, so I know the side effects and consequences of what
+                  happens when
+                  your immune system isn't working.
+                  Guess who's going through the immunosuppressant gambit now? This girl&reg;.
 
-            </p>
-         </section>
-      </article>
-   </main>
+               </p>
+            </section>
+         </article>
+      </main>
+   </div>
 </body>
 
 </html>
