All finished i think

--- a/index.html
+++ b/index.html
@@ -109,33 +109,27 @@
             <section>
                <h2 class="headings">Voorhees, New Jersey</h2>
                <p> Moved to New Jersey because my husband wanted to be near his family and ailing grandma. I had plans
-                  to
-                  work at a lab, my old
-                  Comparative Medicine Director was from New Jersey and was willing to help me find a place when we
+                  to work at a lab, my old Comparative Medicine Director was from New Jersey and was willing to help me
+                  find a place when we
                   settled. Except the moment we moved in, I got sick.
                   And I got worse. And we had no health care, because I had quit my job to move.
                   My job supplied us with full coverage healthcare, fmla, and dental and vision and so many things. Then
-                  I
-                  got sick, and didnt have any of those things. Turns out the New Jersey doctors
-                  like treating everyone like a drug addict and they like to gaslight patients. Lucky me I knew medical
+                  I got sick, and didnt have any of those things. Turns out New Jersey doctors
+                  like treating everyone like a drug addict and they like to gaslight patients. <em>Lucky</em> me I knew
+                  medical
                   stuff, except it still took 2.5 years, dozens of doctors, multiple hospitals and a few
-                  hospitilizations
-                  to finaly get diagnosed. <br>
+                  hospitilizations to finaly get diagnosed. <br>
                   Also learned New Jersey has no labor laws, only the federal level which is
                   literally nothing. Ya'll dont get mandated breaks or sick time or PTO? Wtf.
-                  Ya'll are treated like absolute garbage here and you guys are okay with that? And when my car broke
-                  down
-                  and needed a jump not a single person would help amongst other more confrontational problems I've had
-                  here. Sure in Seattle you get a naked guy in a tree once in a while, but weed is legal, people are
-                  nice,
-                  and employees have rights. <br>
+                  Ya'll are treated like absolute garbage here and everyones okay with that?
+                  Sure in Seattle you get a naked guy in a tree once in a while, but people are
+                  nice (except 3rd and Pine, always avoid 3rd and Pine) and employees have rights. <br>
                   Anyway, still sick, unemployed, in medical debt and trying to restart my entire life
                   from scratch because no one actually cares about sick people, which was sadly reinforced during
                   the pandemic. The irony lies in the fact my job was doing medical studies which
                   required massive amounts of different immunosuppressants and the occasional radioactive isotope. I
                   literally raised animals with no immune system, so I know the side effects and consequences of what
-                  happens when
-                  your immune system isn't working.
+                  happens when your immune system isn't working.
                   Guess who's going through the immunosuppressant gambit now? This girl&reg;.
 
                </p>
