Fixed css path link

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-   <link rel="stylesheet" type="text/css"
-      href="C:\Users\Avali\Documents\Launchcode\graded_4\js-assignment-4-html-me-something-PattZhou\style.css" />
+   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <title>Tiffany Patton: My life and Places I've lived</title>
 </head>
@@ -114,7 +113,7 @@
                   settled. Except the moment we moved in, I got sick.
                   And I got worse. And we had no health care, because I had quit my job to move.
                   My job supplied us with full coverage healthcare, fmla, and dental and vision and so many things. Then
-                  I got sick, and didnt have any of those things. Turns out New Jersey doctors
+                  I got sick and didnt have any of those things. Turns out New Jersey doctors
                   like treating everyone like a drug addict and they like to gaslight patients. <em>Lucky</em> me I knew
                   medical
                   stuff, except it still took 2.5 years, dozens of doctors, multiple hospitals and a few
